tests/paczka1/fuzzy1/91643215.err
Error in line 1: wyvDQTiI A584 81,8
Error in line 17: HeY9H8 A241 17,7
Error in line 20: 4Gz S799 4I,1
Error in line 26: S799 S799 259,6
Error in line 38: S799 A241 87,4
